--- a/template-view.html
+++ b/template-view.html
@@ -725,7 +725,7 @@ Example:
 
     // Set up top tab behavior – redirect to their respective pages.
     document.getElementById('myTemplatesTab').addEventListener('click', () => {
-      window.location.href = 'story-templates.html';
+      window.location.href = 'tools.html';
     });
     document.getElementById('allTemplatesTab').addEventListener('click', () => {
       window.location.href = 'all-templates.html';
